feat(infrastructure): implement F0.4 database setup with hexagonal architecture
- Add database infrastructure with async SQLAlchemy 2.0
- Create Database class for connection management
- Implement BaseModel with UUID and timestamps
- Add Alembic for async migrations
- Create repository protocols in domain layer
- Add infrastructure error types with Result pattern
- Setup integration tests for database (no unit tests for adapters)
- Add mypy type checking to development workflow
- Fix all type errors for strict type safety
- Update development checklist with testing strategy clarifications

Key architectural decisions:
- Infrastructure adapters only have integration tests (not unit tests)
- BaseModel lives in infrastructure (not domain) to keep domain pure
- Settings from environment via Pydantic Settings
- Flat test directory structure with descriptive filenames
- Mypy configured with strict mode for type safety

All tests passing (20/20), type checks clean, 66% coverage

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -76,3 +76,35 @@ show_missing = true
 
 [tool.coverage.html]
 directory = "htmlcov"
+
+# =============================================================================
+# Type Checking Configuration
+# =============================================================================
+[tool.mypy]
+# Use Python version from project configuration
+# No need to specify python_version - mypy will use the environment's version
+files = ["src", "tests"]
+exclude = [
+    "DELETE/",
+    "htmlcov/",
+    "site/",
+    ".venv/",
+    "venv/",
+]
+strict = true
+warn_return_any = true
+warn_unused_configs = true
+no_implicit_reexport = true
+
+# Per-module options for third-party libraries without stubs
+[[tool.mypy.overrides]]
+module = [
+    "uvicorn",
+    "passlib.*",
+    "jose",
+    "fakeredis.*",
+    "alembic.*",
+    "sqlalchemy.*",
+    "asyncpg.*",
+]
+ignore_missing_imports = true
