--- a/pytest.ini
+++ b/pytest.ini
@@ -1,6 +1,10 @@
 [pytest]
 # Pytest configuration for Dashtam test suite
 
+# Async configuration
+asyncio_mode = auto
+asyncio_default_fixture_loop_scope = function
+
 # Test discovery patterns
 python_files = test_*.py
 python_classes = Test*
@@ -34,6 +38,7 @@ markers =
     slow: Slow-running tests
     smoke_test: Smoke tests (end-to-end flow validation with state preservation)
     smoke: Smoke tests (run in separate isolated session)
+    asyncio: Async test that requires event loop
 
 # Logging
 log_cli = false
