--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -113,25 +113,6 @@ plugins:
 # Navigation
 nav:
   - Home: index.md
-  - API Reference:
-      - Overview: api/index.md
-      - Services: api/services.md
-      - Models: api/models.md
-      - Core: api/core.md
-  - Development:
-    - Architecture:
-      - Overview: development/architecture/overview.md
-      - JWT Authentication: development/architecture/jwt-authentication.md
-      - RESTful API Design: development/architecture/restful-api-design.md
-      - Schemas Design: development/architecture/schemas-design.md
-    - Guides:
-      - Testing Guide: development/guides/testing-guide.md
-      - Git Workflow: development/guides/git-workflow.md
-      - Git Quick Reference: development/guides/git-quick-reference.md
-      - UV Package Management: development/guides/uv-package-management.md
-      - Mermaid Diagram Standards: development/guides/mermaid-diagram-standards.md
-    - Infrastructure:
-      - Docker Setup: development/infrastructure/docker-setup.md
-      - Database Migrations: development/infrastructure/database-migrations.md
-  - Reviews:
-    - REST API Audit (2025-10-05): reviews/REST_API_AUDIT_REPORT_2025-10-05.md
+  - Architecture:
+    - Database Architecture: architecture/database-architecture.md
+    - Directory Structure: architecture/directory-structure.md
