fix(test): enable Alembic migrations in test and dev environments
- Enable migrations in docker-compose.test.yml (was disabled since F0.4 TODO)
- Enable migrations in Dockerfile development stage
- Migrations now run automatically on container startup
- All 32/32 tests passing (18 integration + 14 unit/API)

Root cause: Alembic migrations were disabled with TODO comment during
clean slate setup to prevent crash-loop. F0.4 completed migrations
but TODO was never removed.

Impact:
- Test database tests for alembic_version table were failing
- test_alembic_version_table_exists: Expected table wasn't created
- test_initial_migration_recorded: Table didn't exist

Solution:
- Test env: Run 'uv run alembic upgrade head' before tail -f
- Dev env: Run migrations before uvicorn starts
- Migrations are idempotent (safe to run multiple times)

Testing verified:
- All integration tests pass (database + cache)
- Migrations run successfully on startup
- Test database properly initialized

--- a/compose/docker-compose.test.yml
+++ b/compose/docker-compose.test.yml
@@ -90,10 +90,11 @@ services:
       - "traefik.http.routers.dashtam-test.service=dashtam-test"
       - "traefik.http.services.dashtam-test.loadbalancer.server.port=8000"
     # Keep container running for on-demand test execution
-    # TODO F0.4: Re-enable automatic migrations once Alembic is initialized
-    # TEMPORARY: Removed auto-migrations to prevent crash-loop during clean slate setup
+    # Run Alembic migrations before starting
     command: >
       sh -c "
+        echo 'Running Alembic migrations...' &&
+        uv run alembic upgrade head &&
         echo 'Test environment ready. Database and Redis are available.' &&
         echo 'Run tests with: docker compose -f docker-compose.test.yml exec app pytest' &&
         tail -f /dev/null
