feat(secrets): implement hexagonal secrets management with Protocol-based DI
Implements Feature F0.7 - Secrets Management with Hexagonal Architecture

Core Components:
- SecretsProtocol: Read-only protocol (get_secret, get_secret_json, refresh_cache)
- EnvAdapter: Local dev adapter (reads from environment variables)
- AWSAdapter: Production adapter (AWS Secrets Manager with caching)
- Container: Centralized DI with backend selection (Composition Root pattern)

Architecture Decisions:
- Read-only protocol (apps don't write secrets, principle of least privilege)
- Protocol over ABC (structural typing, Python 3.13+ best practice)
- Result types with railway-oriented programming (no exceptions)
- Container owns backend selection logic (industry best practice)

Settings Integration:
- Settings.from_secrets_manager(secrets) for production (explicit pattern)
- Settings() for dev/test (Pydantic default .env loading)
- Application startup explicitly chooses method based on SECRETS_BACKEND

Files Added:
- src/domain/protocols/secrets_protocol.py (62 lines)
- src/infrastructure/secrets/env_adapter.py (108 lines)
- src/infrastructure/secrets/aws_adapter.py (144 lines)
- src/infrastructure/secrets/__init__.py (28 lines)
- src/core/container.py (166 lines)

Files Modified:
- src/core/config.py: Added Settings.from_secrets_manager() method
- src/core/errors.py: Added SecretsError class
- src/infrastructure/cache/__init__.py: Removed old singleton code
- tests/conftest.py: Added mock_container_dependencies fixture

Dependencies:
- boto3: AWS SDK for Python
- moto[secretsmanager]: Mock AWS for testing

Closes #F0.7

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -33,6 +33,7 @@ dev = [
     "black>=25.9.0",
     "fakeredis[lua]>=2.32.0",
     "httpx>=0.28.1",
+    "moto[secretsmanager]>=5.1.16",
     "mypy>=1.18.2",
     "pytest>=8.4.2",
     "pytest-asyncio>=1.2.0",
