feat(logging): implement F0.8 structured logging with hexagonal architecture
Implement comprehensive structured logging system following hexagonal
architecture principles with Protocol-based abstraction and multiple
backend adapters.

Architecture:
- Domain: LoggerProtocol with 7 methods (debug, info, warning, error,
  critical, bind, with_context)
- Infrastructure: ConsoleAdapter (dev/test) and CloudWatchAdapter
  (production)
- Core: Centralized DI container with environment-based adapter selection
- Presentation: TraceMiddleware for request-scoped trace ID injection

Key Features:
- 5-level log hierarchy (DEBUG, INFO, WARNING, ERROR, CRITICAL)
- Context binding for request-scoped logging (bind/with_context)
- Trace correlation with OpenTelemetry trace_id
- Environment abstraction (dev → Console, prod → CloudWatch)
- Security-first (no passwords, tokens, API keys logged)
- Graceful degradation (CloudWatch fallback to console on error)

Implementation:
- src/domain/protocols/logger_protocol.py: Protocol definition (PORT)
- src/infrastructure/logging/console_adapter.py: structlog-based adapter
- src/infrastructure/logging/cloudwatch_adapter.py: AWS CloudWatch adapter
- src/presentation/api/middleware/trace_middleware.py: Trace ID middleware
- src/core/container.py: get_logger() singleton with adapter selection
- src/core/config.py: Logging configuration (LOG_LEVEL, aws_region)
- src/main.py: TraceMiddleware integration

Testing:
- 76 tests total (54 unit + 22 integration)
- Unit tests: Protocol compliance, context binding, all log levels
- Integration tests: Real structlog, moto-mocked CloudWatch
- Clean test output (CloudWatch fallback errors suppressed)
- Atexit exception fixed (graceful I/O error handling)

Documentation:
- docs/architecture/structured-logging-architecture.md: Complete
  architecture guide with 5-level hierarchy, context binding patterns,
  CloudWatch setup, and production deployment guide
- Markdown linting: 0 violations
- Comprehensive docstrin

--- a/env/.env.test.example
+++ b/env/.env.test.example
@@ -6,6 +6,7 @@ APP_NAME=Dashtam
 APP_VERSION=0.1.0
 ENVIRONMENT=testing
 DEBUG=true
+LOG_LEVEL=INFO
 API_V1_PREFIX=/api/v1
 
 # Server Configuration
