--- a/pyproject.toml
+++ b/pyproject.toml
@@ -24,6 +24,7 @@ dependencies = [
     "redis>=7.0.0",
     "requests>=2.32.5",
     "sqlmodel>=0.0.25",
+    "structlog>=25.5.0",
     "urllib3>=2.5.0",
     "uvicorn[standard]>=0.37.0",
 ]
@@ -31,9 +32,10 @@ dependencies = [
 [dependency-groups]
 dev = [
     "black>=25.9.0",
+    "boto3-stubs[logs]>=1.40.73",
     "fakeredis[lua]>=2.32.0",
     "httpx>=0.28.1",
-    "moto[secretsmanager]>=5.1.16",
+    "moto[logs,secretsmanager]>=5.1.16",
     "mypy>=1.18.2",
     "pytest>=8.4.2",
     "pytest-asyncio>=1.2.0",
