feat(error-handling): implement RFC 7807 error handling (F0.11)
Implement RFC 7807 Problem Details for HTTP APIs with complete error
handling across all architectural layers.

## Implementation

### Application Layer
- Add ApplicationError dataclass with ApplicationErrorCode enum
- 8 error codes: COMMAND_VALIDATION_FAILED, UNAUTHORIZED, FORBIDDEN,
  NOT_FOUND, CONFLICT, RATE_LIMIT_EXCEEDED, COMMAND_EXECUTION_FAILED,
  QUERY_FAILED
- Wraps domain errors with application-specific context

### Presentation Layer
- Add RFC 7807 ProblemDetails and ErrorDetail Pydantic models
- Add ErrorResponseBuilder utility (HTTP status + title mapping)
- Add global exception handlers for FastAPI
- Integrate with TraceMiddleware for trace_id propagation
- Register exception handlers in main.py

### Testing (58 new tests, 100% coverage)
- Unit tests (42):
  - test_application_errors.py (15 tests)
  - test_presentation_problem_details.py (13 tests)
  - test_presentation_error_response_builder.py (14 tests)
- Integration tests (16):
  - test_error_handling_flow.py (end-to-end Domain→Application→Presentation)

### Documentation
- Add docs/guides/error-handling-usage.md (489 lines)
  - Practical examples for all layers
  - Common patterns (ValidationError, NotFoundError, etc.)
  - Anti-patterns to avoid
  - Testing guidance
- Update docs/architecture/testing-architecture.md
  - Add established patterns from Phase 0
  - Session management for domain events
  - Real fixture patterns from conftest.py
  - Test distribution guidelines

### Configuration
- Update env/.env.prod.example
  - Fix ENVIRONMENT=production (was development)
  - Fix DEBUG=false (was true)
  - Fix LOG_LEVEL=INFO (was DEBUG)
- Add error-handling-usage.md to mkdocs.yml navigation

## Results

- Tests: 356 passing (↑54 from 302 baseline)
- Coverage: 87% overall, 100% on all error handling code
- Code quality: All lint/format checks passed
- Documentation: MkDocs builds with zero warnings

## Architecture Compliance

✅ Hexagon

--- a/env/.env.prod.example
+++ b/env/.env.prod.example
@@ -12,13 +12,13 @@ REDIS_URL=redis://redis:6379/0
 # Application Configuration
 APP_NAME=Dashtam
 APP_VERSION=0.1.0
-ENVIRONMENT=development
-DEBUG=true
+ENVIRONMENT=production
+DEBUG=false
 APP_PORT=8000
 HOST=0.0.0.0
 PORT=8000
-RELOAD=true
-LOG_LEVEL=DEBUG
+RELOAD=false
+LOG_LEVEL=INFO
 
 # Security Configuration
 SECRET_KEY=your-secret-key-will-be-generated-by-make-keys
