fix(config): replace hardcoded verification URL with configuration-based setting
- Add verification_url_base field to Settings (src/core/config.py)
- Update URL validator to include new field
- Modify EmailEventHandler to accept Settings parameter
- Update container.py to inject settings into email handler
- Add VERIFICATION_URL_BASE to all environment templates
- Remove unnecessary mock_settings from email handler tests
- Refactor test_core_config.py to use base_test_env pytest fixture

Fixes Phase 0 Audit Issue #1 (High Priority)

Addresses user feedback about unnecessary mocking and code duplication:
- Email handler tests now use real settings from .env.test
- Config tests use reusable fixture to eliminate 8+ instances of hardcoded env dicts
- Tests remain isolated via patch.dict(clear=True) for validation purposes

All 356 tests passing.

--- a/env/.env.ci.example
+++ b/env/.env.ci.example
@@ -13,6 +13,7 @@ API_V1_PREFIX=/api/v1
 # Application URLs (internal Docker network communication - HTTPS)
 API_BASE_URL=https://app:8000
 CALLBACK_BASE_URL=https://callback:8182
+VERIFICATION_URL_BASE=https://app:8000
 
 # SSL/TLS Configuration (self-signed certs for CI)
 API_SSL_CERT_FILE=certs/cert.pem
