--- a/env/.env.dev.example
+++ b/env/.env.dev.example
@@ -45,6 +45,7 @@ PASSWORD_RESET_TOKEN_EXPIRE_HOURS=1
 API_V1_PREFIX=/api/v1
 API_BASE_URL=https://dashtam.local
 CALLBACK_BASE_URL=https://127.0.0.1:8182
+VERIFICATION_URL_BASE=https://dashtam.local
 
 # CORS Configuration
 CORS_ORIGINS=https://dashtam.local,https://localhost:3000
