--- a/env/.env.prod.example
+++ b/env/.env.prod.example
@@ -46,6 +46,7 @@ PASSWORD_RESET_TOKEN_EXPIRE_HOURS=1
 API_V1_PREFIX=/api/v1
 API_BASE_URL=https://localhost:8000
 CALLBACK_BASE_URL=https://127.0.0.1:8182
+VERIFICATION_URL_BASE=https://localhost:8000
 
 # CORS Configuration
 CORS_ORIGINS=https://localhost:3000,https://127.0.0.1:3000,https://localhost:8000
