--- a/env/.env.test.example
+++ b/env/.env.test.example
@@ -35,6 +35,7 @@ REFRESH_TOKEN_EXPIRE_DAYS=30
 # API Configuration
 API_BASE_URL=https://test.dashtam.local
 CALLBACK_BASE_URL=https://127.0.0.1:8184
+VERIFICATION_URL_BASE=https://test.dashtam.local
 
 # CORS Configuration
 CORS_ORIGINS=https://test.dashtam.local
