--- a/pyproject.toml
+++ b/pyproject.toml
@@ -26,6 +26,7 @@ dependencies = [
     "sqlmodel>=0.0.25",
     "structlog>=25.5.0",
     "urllib3>=2.5.0",
+    "user-agents>=2.2.0",
     "uvicorn[standard]>=0.37.0",
 ]
 
