test(session): add integration tests for RedisSessionCache
- Add 25 integration tests for RedisSessionCache (test_session_cache.py)
- Add session_cache fixture to conftest.py
- Add mypy override to relax strict typing for test files
- Fix Success() syntax bug in conftest.py mock setup

Tests cover: get/set, delete, exists, user index operations,
update_last_activity, TTL handling, and edge cases.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -112,3 +112,10 @@ module = [
     "asyncpg.*",
 ]
 ignore_missing_imports = true
+
+# Test files: relax strict typing (common practice)
+# Test functions are simple, pytest fixtures are hard to annotate properly
+[[tool.mypy.overrides]]
+module = ["tests.*"]
+disallow_untyped_defs = false
+disallow_untyped_decorators = false
