feat(auth): add integration and API tests for authorization
- Add 24 integration tests for CasbinAdapter (policy loading, permission
  checking, role operations, cache/audit/event integration)
- Add 18 API tests for authorization dependencies (require_permission,
  require_casbin_role, require_any_permission, require_all_permissions)
- Fix CasbinAdapter bug: enforce() is synchronous, not async
- Fix CasbinAdapter type errors (Result handling, logger.error args)
- Add delete_pattern method to CacheProtocol and RedisAdapter
- Add casbin to mypy ignores in pyproject.toml
- Centralize mock fixtures in conftest.py (mock_logger, mock_audit,
  mock_event_bus, mock_cache)

Tests: 653 passed

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -112,6 +112,8 @@ module = [
     "alembic.*",
     "sqlalchemy.*",
     "asyncpg.*",
+    "casbin",
+    "casbin_async_sqlalchemy_adapter",
 ]
 ignore_missing_imports = true
 
