--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,6 +7,8 @@ dependencies = [
     "alembic>=1.16.5",
     "asyncpg>=0.30.0",
     "boto3>=1.40.45",
+    "casbin>=1.43.0",
+    "casbin-async-sqlalchemy-adapter>=1.15.0",
     "cryptography>=46.0.2",
     "email-validator>=2.3.0",
     "fastapi>=0.118.0",
@@ -110,6 +112,8 @@ module = [
     "alembic.*",
     "sqlalchemy.*",
     "asyncpg.*",
+    "casbin",
+    "casbin_async_sqlalchemy_adapter",
 ]
 ignore_missing_imports = true
 
