feat(domain): add Account domain model (F2.2)
Account Domain Model Implementation:
- Money value object with Decimal precision, arithmetic operations, comparison
- AccountType enum with 15 account types and category helpers
- Account entity with Result types for update methods
- AccountRepository protocol with 8 async persistence methods
- AccountError domain error messages
- Updated domain exports

Documentation:
- Added account-domain-model.md architecture doc
- Updated error-handling-architecture.md with value object exceptions

Testing:
- 63 unit tests for Money value object (test_domain_money.py)
- 55 unit tests for Account entity (test_domain_account.py)
- All 974 tests pass

F2.1 Technical Debt Fixes:
- Fixed provider event imports (auth_events → provider_events)
- Fixed provider event attributes (provider_name → provider_slug, etc.)
- Updated tests for new event structure
- Added user_agents to mypy ignore list

Quality:
- Lint: passing
- Type check: passing (0 errors)
- Coverage: 78%

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -114,6 +114,8 @@ module = [
     "asyncpg.*",
     "casbin",
     "casbin_async_sqlalchemy_adapter",
+    "user_agents",
+    "user_agents.*",
 ]
 ignore_missing_imports = true
 
