feat(core): migrate from UUID v4 to UUID v7 (RFC 9562)
Migrate entire codebase from UUID v4 (random) to UUID v7 (time-ordered)
for better database performance and chronological sorting capabilities.

Changes:
- Add uuid7>=0.1.0 dependency (installs as uuid_extensions module)
- Update all UUID generation from uuid4() to uuid7()
- Update 5 domain entities (User, Session, Account, ProviderConnection, Transaction)
- Update 12 application layer handlers
- Update 6 infrastructure layer files
- Update 1 presentation layer file (trace middleware)
- Update 26 test files (402 uuid7() calls)
- Update 11 architecture documentation files
- Configure mypy to ignore uuid_extensions (no type stubs)

Benefits:
- Time-ordered IDs enable chronological sorting by ID alone
- 10-30% faster B-tree index operations
- Better database page utilization (reduced fragmentation)
- ID itself encodes creation timestamp (debugging aid)
- Future-proof standard (RFC 9562, May 2024)

Testing:
- All 1018 tests passing (0 failures, 17 skipped)
- 79% code coverage maintained
- Lint and format checks passed
- No database schema changes required (PostgreSQL UUID type is version-agnostic)

Impact:
- Zero production impact (pre-release, no data migration needed)
- Backward compatible (UUID v7 stored same as v4 in PostgreSQL)
- No API changes (UUID type unchanged)

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -29,6 +29,7 @@ dependencies = [
     "structlog>=25.5.0",
     "urllib3>=2.5.0",
     "user-agents>=2.2.0",
+    "uuid7>=0.1.0",
     "uvicorn[standard]>=0.37.0",
 ]
 
@@ -116,6 +117,7 @@ module = [
     "casbin_async_sqlalchemy_adapter",
     "user_agents",
     "user_agents.*",
+    "uuid_extensions",
 ]
 ignore_missing_imports = true
 
