--- a/pyproject.toml
+++ b/pyproject.toml
@@ -44,6 +44,7 @@ dev = [
     "pytest>=8.4.2",
     "pytest-asyncio>=1.2.0",
     "pytest-cov>=7.0.0",
+    "pytest-httpx>=0.35.0",
     "ruff>=0.13.3",
     "types-passlib>=1.7.7.20250602",
     "types-python-dateutil>=2.9.0.20250822",
