--- a/pyproject.toml
+++ b/pyproject.toml
@@ -38,6 +38,7 @@ dev = [
     "black>=25.9.0",
     "boto3-stubs[logs]>=1.40.73",
     "fakeredis[lua]>=2.32.0",
+    "freezegun>=1.5.5",
     "httpx>=0.28.1",
     "moto[logs,secretsmanager]>=5.1.16",
     "mypy>=1.18.2",
