--- a/pyproject.toml
+++ b/pyproject.toml
@@ -38,12 +38,14 @@ dev = [
     "black>=25.9.0",
     "boto3-stubs[logs]>=1.40.73",
     "fakeredis[lua]>=2.32.0",
+    "freezegun>=1.5.5",
     "httpx>=0.28.1",
     "moto[logs,secretsmanager]>=5.1.16",
     "mypy>=1.18.2",
     "pytest>=8.4.2",
     "pytest-asyncio>=1.2.0",
     "pytest-cov>=7.0.0",
+    "pytest-httpx>=0.35.0",
     "ruff>=0.13.3",
     "types-passlib>=1.7.7.20250602",
     "types-python-dateutil>=2.9.0.20250822",
