docs(security): complete Stream 6 Security Audit (TODOs #9-11)
Phase 6 v1.0 Release Preparation - Stream 6: Security Audit

This commit completes the final security audit documentation and DRY refactoring:

TODO #9: Validation Architecture Documentation
- Created docs/architecture/validation-architecture.md (1,293 lines)
- Documented startup validation (config-only with 5 validators)
- Documented runtime validation (5 layers: API, value objects, entities, validators, Result types)
- Included decision guide, testing strategy, best practices, compliance mapping

TODO #10: Key Management Guide
- Created docs/guides/key-management.md (1,054 lines)
- Documented SECRET_KEY (JWT, ≥32 chars) vs ENCRYPTION_KEY (AES-256, exactly 32 chars)
- Covered environment-specific management (dev, test, CI, prod)
- Included key rotation procedures, backup/recovery, security best practices
- Documented compliance requirements (PCI-DSS, SOC 2, GDPR, NIST)

TODO #11: Refactor Unit Tests for DRY
- Added test_settings fixture to tests/conftest.py
- Refactored test_infrastructure_schwab_oauth.py to use .env.test settings
- Eliminated hardcoded SECRET_KEY and ENCRYPTION_KEY from unit tests
- Single source of truth: all test keys now from .env.test.example
- Kept hardcoded values ONLY in test_core_config.py (tests validation logic)

Stream 6 Security Audit Complete:
✅ F6.6.1: Encryption implementation audit (AES-256-GCM) - PASS
✅ F6.6.2: JWT/refresh token security audit - PASS (1 fix)
✅ F6.6.3: Rate limiting configuration audit - PASS
✅ F6.6.4: Audit trail completeness (IP/user agent) - PASS
✅ F6.6.5: Error response security - PASS (1 fix)
✅ F6.6.6: Auth/authz coverage - PASS (1 fix)
✅ F6.6.7: Validation architecture documentation - DONE
✅ F6.6.8: Key management guide - DONE
✅ F6.6.9: Unit test DRY refactoring - DONE

Security Grade: A (Excellent)
Test Results: 1,589 passed, 17 skipped, 81% coverage
Quality Checks: format ✓, lint ✓, type-check ✓

References:
- ~/references/audit/comprehensive-se

--- a/env/.env.dev.example
+++ b/env/.env.dev.example
@@ -23,7 +23,9 @@ LOG_LEVEL=DEBUG
 SECRET_KEY=your-secret-key-will-be-generated-by-make-keys
 ENCRYPTION_KEY=your-encryption-key-will-be-generated-by-make-keys
 ALGORITHM=HS256
-ACCESS_TOKEN_EXPIRE_MINUTES=30
+# Access token: 15 minutes (recommended security policy)
+# Refresh token: 30 days (long-lived, rotated on use)
+ACCESS_TOKEN_EXPIRE_MINUTES=15
 REFRESH_TOKEN_EXPIRE_DAYS=30
 
 # Password Hashing Configuration
