--- a/env/.env.ci.example
+++ b/env/.env.ci.example
@@ -40,10 +40,11 @@ REDIS_URL=redis://redis:6379/1
 REDIS_PORT=6379
 
 # Security Configuration (CI test keys - never use in production)
-SECRET_KEY=ci-test-secret-key-never-use-in-production
-ENCRYPTION_KEY=ci-test-encryption-key-32chars
+SECRET_KEY=ci-test-secret-key-never-use-in-production-32-chars-long!
+ENCRYPTION_KEY=ci-key-for-encryption-test-32!@#
 ALGORITHM=HS256
-ACCESS_TOKEN_EXPIRE_MINUTES=30
+# Access token: 15 minutes (matches production security policy)
+ACCESS_TOKEN_EXPIRE_MINUTES=15
 REFRESH_TOKEN_EXPIRE_DAYS=30
 
 # CI-specific flags
