--- a/env/.env.test.example
+++ b/env/.env.test.example
@@ -27,9 +27,10 @@ POSTGRES_PORT=5432
 
 # Security Configuration (test keys)
 SECRET_KEY=test-secret-key-for-automated-testing-only-never-use-in-production
-ENCRYPTION_KEY=test-encryption-key-32-chars-long
+ENCRYPTION_KEY=test-key-for-encryption-32-ch!@#
 ALGORITHM=HS256
-ACCESS_TOKEN_EXPIRE_MINUTES=30
+# Access token: 15 minutes (matches production security policy)
+ACCESS_TOKEN_EXPIRE_MINUTES=15
 REFRESH_TOKEN_EXPIRE_DAYS=30
 
 # API Configuration
