feat(docs): add MkDocs local preview with Traefik HTTPS routing
F6.3: MkDocs Local Preview

Changes:
- Add 18 missing files to mkdocs.yml navigation (API, Architecture, Guides)
- Add Traefik routing for MkDocs on docs.dashtam.local (HTTPS)
- Update Makefile docs-serve command with correct URL
- Update dev-up to show MkDocs URL hint
- Verify docs-build passes with zero warnings

All documentation now accessible at https://docs.dashtam.local/Dashtam/
with live reload for local development.

Verification:
- make docs-build: ✓ (zero warnings)
- make docs-serve: ✓ (HTTPS via Traefik)
- make format: ✓
- make lint: ✓
- make type-check: ✓

--- a/compose/docker-compose.dev.yml
+++ b/compose/docker-compose.dev.yml
@@ -71,6 +71,12 @@ services:
       - "traefik.http.routers.dashtam-dev.tls=true"
       - "traefik.http.routers.dashtam-dev.service=dashtam-dev"
       - "traefik.http.services.dashtam-dev.loadbalancer.server.port=8000"
+      # MkDocs documentation router (HTTPS)
+      - "traefik.http.routers.dashtam-dev-docs.rule=Host(`docs.dashtam.local`)"
+      - "traefik.http.routers.dashtam-dev-docs.entrypoints=websecure"
+      - "traefik.http.routers.dashtam-dev-docs.tls=true"
+      - "traefik.http.routers.dashtam-dev-docs.service=dashtam-dev-docs"
+      - "traefik.http.services.dashtam-dev-docs.loadbalancer.server.port=8001"
     restart: unless-stopped
 
 networks:
