feat(release): version 1.0.0 with dynamic version reading (F6.8)
- Update version to 1.0.0 in pyproject.toml
- Implement dynamic version reading from pyproject.toml in config.py
- Create comprehensive CHANGELOG.md with all Phase 0-6 features
- Update README.md with complete Quick Start and architecture overview
- Update docs/index.md to reflect v1.0.0 completion status
- Add MkDocs preview support with Traefik routing
- All tests passing (1,589 passed, 17 skipped, 81% coverage)
- All quality checks passing (lint, type-check, docs-build)

Completion Criteria:
- [x] pyproject.toml version = "1.0.0"
- [x] settings.app_version reads from pyproject.toml
- [x] CHANGELOG.md created with v1.0.0 release notes
- [x] All tests pass
- [x] Final documentation review complete
- [x] Ready for release

--- a/compose/docker-compose.dev.yml
+++ b/compose/docker-compose.dev.yml
@@ -53,7 +53,8 @@ services:
     volumes:
       # Mount entire project for full dev experience (mkdocs, config files, etc.)
       - ..:/app:rw
-      # Exclude .venv to prevent host/container conflicts (anonymous volume takes precedence)
+      # Exclude .venv from mount to avoid macOS/Linux binary conflicts
+      # Dependencies synced via Makefile commands (uv sync --all-groups)
       - /app/.venv
     depends_on:
       postgres:
