--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,7 +1,7 @@
 [project]
 name = "dashtam"
-version = "0.1.0"
-description = "Add your description here"
+version = "1.0.0"
+description = "A secure financial data aggregation platform built with hexagonal architecture, CQRS, and domain-driven design"
 requires-python = ">=3.13"
 dependencies = [
     "alembic>=1.16.5",
