Phase 6: v1.0.0 Release Preparation (F6.1-F6.12) (#96)
* feat(phase6): move system endpoints to dedicated router

* refactor(tests): migrate API tests to real app pattern (F6.9)

Migrated 3 API test files from simulated test app pattern to real app with dependency overrides:

- test_admin_rotation_api.py (15 tests)
- test_sessions_api.py (22 tests)
- test_authorization_api.py (18 tests)

Migration approach:
- Use real FastAPI app (from src.main import app)
- Override dependencies via app.dependency_overrides
- Create stub handlers returning Success/Failure with proper DTOs
- Monkeypatch container functions called directly (e.g., get_token_service)
- Add /test/* endpoints to real app for authorization testing

Benefits:
- Tests use real app routing and middleware
- More accurate testing (no fake FastAPI app)
- Easier maintenance (one app, not multiple)
- Consistent with project testing standards

All 55 tests passing (15 + 22 + 18)
All quality checks passed: format, lint
Total API tests: 134 (117 passed, 17 skipped)

* test(freezegun): migrate time-dependent tests to freezegun (F6.10)

Migrate 8 test files (152 tests) from datetime.now() to freezegun for
deterministic time-based testing.

Changes:
- Integration tests: JWT, email verification, password reset, refresh
  token services (41 tests)
- Integration tests: session cache and repository (38 tests)
- Unit tests: provider credentials and session entity (73 tests)

Benefits:
- Deterministic tests (no flakiness)
- Exact assertions (no tolerance ranges)
- Faster execution (no time.sleep)
- Better debugging (predictable timestamps)

Pattern used:
  @freeze_time("2024-01-01 12:00:00")
  def test_expiration():
      expected = datetime(2024, 1, 2, 12, 0, 0, tzinfo=UTC)
      assert actual == expected  # Exact match

All tests passing: 1583/1583 (0 failures)
Coverage: 87% (unchanged)

Related: F6.10 - Time-freezing test migration

* docs(testing): add time-freezing pattern to testing architecture

- Added concise sectio

--- a/compose/docker-compose.dev.yml
+++ b/compose/docker-compose.dev.yml
@@ -53,7 +53,8 @@ services:
     volumes:
       # Mount entire project for full dev experience (mkdocs, config files, etc.)
       - ..:/app:rw
-      # Exclude .venv to prevent host/container conflicts (anonymous volume takes precedence)
+      # Exclude .venv from mount to avoid macOS/Linux binary conflicts
+      # Dependencies synced via Makefile commands (uv sync --all-groups)
       - /app/.venv
     depends_on:
       postgres:
@@ -71,27 +72,13 @@ services:
       - "traefik.http.routers.dashtam-dev.tls=true"
       - "traefik.http.routers.dashtam-dev.service=dashtam-dev"
       - "traefik.http.services.dashtam-dev.loadbalancer.server.port=8000"
+      # MkDocs documentation router (HTTPS)
+      - "traefik.http.routers.dashtam-dev-docs.rule=Host(`docs.dashtam.local`)"
+      - "traefik.http.routers.dashtam-dev-docs.entrypoints=websecure"
+      - "traefik.http.routers.dashtam-dev-docs.tls=true"
+      - "traefik.http.routers.dashtam-dev-docs.service=dashtam-dev-docs"
+      - "traefik.http.services.dashtam-dev-docs.loadbalancer.server.port=8001"
     restart: unless-stopped
-
-  # OAuth Callback Server (Development)
-  callback:
-    build:
-      context: ..
-      dockerfile: docker/Dockerfile
-      target: callback
-    container_name: dashtam-dev-callback
-    env_file:
-      - ../env/.env.dev
-    ports:
-      - "8182:8182"
-    volumes:
-      - ../certs:/app/certs:ro
-    depends_on:
-      - app
-    networks:
-      - dashtam-dev-network
-    restart: unless-stopped
-
 
 networks:
   dashtam-dev-network:
