--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -72,54 +72,57 @@ jobs:
         if: always()
         run: docker compose -f compose/docker-compose.ci.yml down -v
 
-  test-smoke:
-    name: Smoke Tests
-    runs-on: ubuntu-latest
-    needs: test-main  # Run after main tests pass
-    
-    steps:
-      - name: Checkout code
-        uses: actions/checkout@v4
-
-      - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v3
-
-      - name: Prepare CI environment configuration
-        run: |
-          cp env/.env.ci.example env/.env.ci
-          echo "✅ CI environment configuration prepared"
-
-      - name: Start test environment (isolated for smoke tests)
-        run: |
-          docker compose -f compose/docker-compose.ci.yml up -d --build
-
-      - name: Wait for services to be ready
-        run: |
-          echo "Waiting for PostgreSQL..."
-          docker compose -f compose/docker-compose.ci.yml exec -T postgres pg_isready -U dashtam_test_user -d dashtam_test || sleep 2
-          echo "Services ready"
-
-      - name: Run smoke tests (isolated session)
-        run: |
-          docker compose -f compose/docker-compose.ci.yml exec -T app \
-            uv run pytest -m smoke -v \
-            --junitxml=/app/smoke-results.xml
-
-      - name: Copy smoke test results from container
-        if: always()
-        run: |
-          docker cp dashtam-ci-app:/app/smoke-results.xml ./smoke-results.xml || true
-
-      - name: Upload smoke test results
-        if: always()
-        uses: actions/upload-artifact@v4
-        with:
-          name: test-results-smoke
-          path: smoke-results.xml
-
-      - name: Cleanup
-        if: always()
-        run: docker compose -f compose/docker-compose.ci.yml down -v
+  # test-smoke:
+  #   name: Smoke Tests
+  #   runs-on: ubuntu-latest
+  #   needs: test-main  # Run after main tests pass
+  #   
+  #   # NOTE: Commented out until actual smoke tests are implemented (v1.1.0+)
+  #   # Uncomment when tests/smoke/ contains actual test files
+  #   
+  #   steps:
+  #     - name: Checkout code
+  #       uses: actions/checkout@v4
+  #
+  #     - name: Set up Docker Buildx
+  #       uses: docker/setup-buildx-action@v3
+  #
+  #     - name: Prepare CI environment configuration
+  #       run: |
+  #         cp env/.env.ci.example env/.env.ci
+  #         echo "✅ CI environment configuration prepared"
+  #
+  #     - name: Start test environment (isolated for smoke tests)
+  #       run: |
+  #         docker compose -f compose/docker-compose.ci.yml up -d --build
+  #
+  #     - name: Wait for services to be ready
+  #       run: |
+  #         echo "Waiting for PostgreSQL..."
+  #         docker compose -f compose/docker-compose.ci.yml exec -T postgres pg_isready -U dashtam_test_user -d dashtam_test || sleep 2
+  #         echo "Services ready"
+  #
+  #     - name: Run smoke tests (isolated session)
+  #       run: |
+  #         docker compose -f compose/docker-compose.ci.yml exec -T app \
+  #           uv run pytest -m smoke -v \
+  #           --junitxml=/app/smoke-results.xml
+  #
+  #     - name: Copy smoke test results from container
+  #       if: always()
+  #       run: |
+  #         docker cp dashtam-ci-app:/app/smoke-results.xml ./smoke-results.xml || true
+  #
+  #     - name: Upload smoke test results
+  #       if: always()
+  #       uses: actions/upload-artifact@v4
+  #       with:
+  #         name: test-results-smoke
+  #         path: smoke-results.xml
+  #
+  #     - name: Cleanup
+  #       if: always()
+  #       run: docker compose -f compose/docker-compose.ci.yml down -v
 
   lint:
     name: Code Quality
