--- a/compose/docker-compose.ci.yml
+++ b/compose/docker-compose.ci.yml
@@ -8,6 +8,7 @@
 # - No restart policies
 # - Optimized PostgreSQL settings for speed over durability
 # - Auto-runs tests and exits with proper status code
+# - Resource limits match GitHub Actions free tier (7GB RAM, 2 CPUs)
 #
 # Usage:
 #   docker compose -f docker-compose.ci.yml up --abort-on-container-exit --exit-code-from app
@@ -21,6 +22,13 @@ services:
     env_file:
       - ../env/.env.ci
     # No port mapping - internal only
+    deploy:
+      resources:
+        limits:
+          cpus: '0.5'
+          memory: 1G
+        reservations:
+          memory: 512M
     tmpfs:
       - /var/lib/postgresql/data
       - /var/run/postgresql
@@ -59,6 +67,13 @@ services:
     env_file:
       - ../env/.env.ci
     # No port mapping - internal only
+    deploy:
+      resources:
+        limits:
+          cpus: '0.5'
+          memory: 512M
+        reservations:
+          memory: 256M
     tmpfs:
       - /data
     command: redis-server --appendonly no --save ""
@@ -81,6 +96,13 @@ services:
     env_file:
       - ../env/.env.ci
     # No port mapping - not needed in CI
+    deploy:
+      resources:
+        limits:
+          cpus: '1.0'
+          memory: 4G  # GitHub Actions effective limit (accounting for system overhead)
+        reservations:
+          memory: 2G
     volumes:
       - ../src:/app/src:ro
       - ../tests:/app/tests:ro
