feat(cache): add cache configuration and metrics infrastructure
Phase 2 & 2a of F6.11 Cache Optimization:
- Added cache TTL configuration to Settings (6 fields)
- Updated all .env.*.example files with cache settings
- Created cache key patterns design document
- Implemented CacheMetrics for hit/miss/error tracking
- Implemented CacheKeys for consistent key construction
- Added container factories for cache_keys and cache_metrics

Files Created:
- docs/architecture/cache-key-patterns.md (354 lines)
- src/infrastructure/cache/cache_metrics.py (169 lines)
- src/infrastructure/cache/cache_keys.py (145 lines)

Files Modified:
- src/core/config.py: Cache TTL fields
- env/.env.*.example: Cache configuration (4 files)
- src/core/container/infrastructure.py: Factory functions

All lint/format/type checks passing.

--- a/env/.env.ci.example
+++ b/env/.env.ci.example
@@ -39,6 +39,14 @@ DB_ECHO=false
 REDIS_URL=redis://redis:6379/1
 REDIS_PORT=6379
 
+# Cache Configuration (TTLs in seconds)
+CACHE_KEY_PREFIX=dashtam
+CACHE_USER_TTL=300          # User data cache: 5 minutes
+CACHE_PROVIDER_TTL=300      # Provider connection cache: 5 minutes
+CACHE_SCHWAB_TTL=300        # Schwab API response cache: 5 minutes
+CACHE_ACCOUNTS_TTL=300      # Account list cache: 5 minutes
+CACHE_SECURITY_TTL=60       # Security config cache: 1 minute
+
 # Security Configuration (CI test keys - never use in production)
 SECRET_KEY=ci-test-secret-key-never-use-in-production-32-chars-long!
 ENCRYPTION_KEY=ci-key-for-encryption-test-32!@#
