--- a/env/.env.prod.example
+++ b/env/.env.prod.example
@@ -9,6 +9,14 @@ DATABASE_URL=postgresql+asyncpg://dashtam_user:secure_password_change_me@postgre
 REDIS_PORT=6379
 REDIS_URL=redis://redis:6379/0
 
+# Cache Configuration (TTLs in seconds)
+CACHE_KEY_PREFIX=dashtam
+CACHE_USER_TTL=300          # User data cache: 5 minutes
+CACHE_PROVIDER_TTL=300      # Provider connection cache: 5 minutes
+CACHE_SCHWAB_TTL=300        # Schwab API response cache: 5 minutes
+CACHE_ACCOUNTS_TTL=300      # Account list cache: 5 minutes
+CACHE_SECURITY_TTL=60       # Security config cache: 1 minute
+
 # Application Configuration
 APP_NAME=Dashtam
 APP_VERSION=0.1.0
