--- a/env/.env.test.example
+++ b/env/.env.test.example
@@ -66,6 +66,14 @@ PLAID_ENVIRONMENT=sandbox
 REDIS_URL=redis://redis:6379/1
 REDIS_PORT=6379
 
+# Cache Configuration (TTLs in seconds)
+CACHE_KEY_PREFIX=dashtam
+CACHE_USER_TTL=300          # User data cache: 5 minutes
+CACHE_PROVIDER_TTL=300      # Provider connection cache: 5 minutes
+CACHE_SCHWAB_TTL=300        # Schwab API response cache: 5 minutes
+CACHE_ACCOUNTS_TTL=300      # Account list cache: 5 minutes
+CACHE_SECURITY_TTL=60       # Security config cache: 1 minute
+
 # Test-specific flags
 TESTING=true
 DISABLE_EXTERNAL_CALLS=true
