docs(provider): add integration guide and migrate Plaid references to Chase
- Add comprehensive Provider Integration Guide (docs/guides/adding-new-providers.md)
  - 8-phase implementation process from research to documentation
  - Complete code templates for adapters, API clients, and mappers
  - Testing requirements with coverage targets (90%+ provider, 95%+ mappers)
  - Files checklist: 12 must-create, 7 must-modify
  - Container registration, database seeding, and quality verification

- Replace Plaid references with Chase throughout codebase (27 files)
  - Update docstrings, comments, and examples in source files
  - Update environment template variables (PLAID_* → CHASE_*)
  - Update 8 architecture docs and API guides
  - Update 3 test file comments
  - Note: No actual Chase implementation - planned for F7.1

All quality checks passing:
- 1,744 tests passed (19 skipped)
- 86% coverage maintained
- Zero lint violations
- Zero markdown lint errors
- Type checking passed

--- a/env/.env.prod.example
+++ b/env/.env.prod.example
@@ -78,10 +78,10 @@ DB_ECHO=false
 SCHWAB_API_BASE_URL=https://api.schwabapi.com
 SCHWAB_REDIRECT_URI=https://127.0.0.1:8182
 
-# Plaid Configuration (Future)
-# PLAID_CLIENT_ID=your_plaid_client_id
-# PLAID_SECRET=your_plaid_secret
-PLAID_ENVIRONMENT=sandbox
+# Chase Configuration (Future)
+# CHASE_API_KEY=your_chase_api_key
+# CHASE_API_SECRET=your_chase_api_secret
+# CHASE_REDIRECT_URI=https://your-domain/callback
 
 # Geolocation
 GEOLITE2_DB_PATH=/app/data/geolite2/GeoLite2-City.mmdb
