--- a/env/.env.ci.example
+++ b/env/.env.ci.example
@@ -68,10 +68,10 @@ SCHWAB_API_SECRET=mock_schwab_client_secret
 SCHWAB_API_BASE_URL=http://mock/schwab
 SCHWAB_REDIRECT_URI=http://mock/callback
 
-# Plaid Configuration (mocked)
-PLAID_CLIENT_ID=mock_plaid_client_id
-PLAID_SECRET=mock_plaid_secret
-PLAID_ENVIRONMENT=sandbox
+# Chase Configuration (mocked)
+CHASE_API_KEY=mock_chase_api_key
+CHASE_API_SECRET=mock_chase_api_secret
+CHASE_REDIRECT_URI=http://mock/callback
 
 # Optional: Code coverage reporting
 # Set this in your CI secrets if using Codecov
