--- a/env/.env.test.example
+++ b/env/.env.test.example
@@ -55,10 +55,10 @@ SCHWAB_API_SECRET=test_schwab_client_secret
 SCHWAB_API_BASE_URL=http://localhost:8999/mock/schwab
 SCHWAB_REDIRECT_URI=https://localhost:8183/callback
 
-# Plaid Configuration (mocked)
-PLAID_CLIENT_ID=test_plaid_client_id
-PLAID_SECRET=test_plaid_secret
-PLAID_ENVIRONMENT=sandbox
+# Chase Configuration (mocked)
+CHASE_API_KEY=test_chase_api_key
+CHASE_API_SECRET=test_chase_api_secret
+CHASE_REDIRECT_URI=https://localhost:8183/callback
 
 # Redis Configuration
 # Use Docker internal hostname 'redis' not 'localhost'
