feat(providers): add Alpaca provider integration (F7.1)
Implement Alpaca Trading API provider with API Key authentication:

Infrastructure:
- AlpacaProvider adapter implementing auth-agnostic ProviderProtocol
- AlpacaAccountsAPI client for account and positions endpoints
- AlpacaTransactionsAPI client for activities endpoint
- Account, Holding, Transaction mappers with comprehensive field mapping

Features:
- API Key authentication via custom headers (APCA-API-KEY-ID/SECRET)
- Paper and live environment support
- Account sync (single account per API key)
- Holdings/positions sync with asset type mapping
- Transaction sync with activity type classification

Tests:
- 101 tests with 100% coverage on all Alpaca provider code
- Unit tests for mappers and provider
- Integration tests for API clients with pytest-httpx

Documentation:
- Added API-key provider section to adding-new-providers.md
- Alpaca example as reference implementation

--- a/env/.env.ci.example
+++ b/env/.env.ci.example
@@ -66,12 +66,17 @@ PYTHONUNBUFFERED=1
 SCHWAB_API_KEY=mock_schwab_client_id
 SCHWAB_API_SECRET=mock_schwab_client_secret
 SCHWAB_API_BASE_URL=http://mock/schwab
-SCHWAB_REDIRECT_URI=http://mock/callback
+SCHWAB_REDIRECT_URI=http://mock/oauth/schwab/callback
+
+# Alpaca Configuration (mocked)
+ALPACA_CLIENT_ID=mock_alpaca_client_id
+ALPACA_CLIENT_SECRET=mock_alpaca_client_secret
+ALPACA_REDIRECT_URI=http://mock/oauth/alpaca/callback
 
 # Chase Configuration (mocked)
 CHASE_API_KEY=mock_chase_api_key
 CHASE_API_SECRET=mock_chase_api_secret
-CHASE_REDIRECT_URI=http://mock/callback
+CHASE_REDIRECT_URI=http://mock/oauth/chase/callback
 
 # Optional: Code coverage reporting
 # Set this in your CI secrets if using Codecov
