--- a/env/.env.dev.example
+++ b/env/.env.dev.example
@@ -74,10 +74,22 @@ DB_ECHO=false
 
 # Schwab OAuth Configuration
 # Get these from https://developer.schwab.com/
+# Register these callback URLs in Schwab Developer Portal:
+#   - https://127.0.0.1:8182/oauth/schwab/callback (standalone)
+#   - https://dashtam.local/oauth/schwab/callback (via Traefik)
 # SCHWAB_API_KEY=your_client_id_here
 # SCHWAB_API_SECRET=your_client_secret_here
 SCHWAB_API_BASE_URL=https://api.schwabapi.com
-SCHWAB_REDIRECT_URI=https://127.0.0.1:8182
+SCHWAB_REDIRECT_URI=https://dashtam.local/oauth/schwab/callback
+
+# Alpaca OAuth Configuration
+# Get these from https://app.alpaca.markets (OAuth Apps section)
+# Register these callback URLs in Alpaca Dashboard:
+#   - https://127.0.0.1:8182/oauth/alpaca/callback (standalone)
+#   - https://dashtam.local/oauth/alpaca/callback (via Traefik)
+# ALPACA_CLIENT_ID=your_alpaca_client_id
+# ALPACA_CLIENT_SECRET=your_alpaca_client_secret
+ALPACA_REDIRECT_URI=https://dashtam.local/oauth/alpaca/callback
 
 # Chase Configuration (Future)
 # CHASE_API_KEY=your_chase_api_key
