--- a/env/.env.test.example
+++ b/env/.env.test.example
@@ -53,12 +53,17 @@ API_CALLBACK_SSL_KEY_FILE=certs/callback_key.pem
 SCHWAB_API_KEY=test_schwab_client_id
 SCHWAB_API_SECRET=test_schwab_client_secret
 SCHWAB_API_BASE_URL=http://localhost:8999/mock/schwab
-SCHWAB_REDIRECT_URI=https://localhost:8183/callback
+SCHWAB_REDIRECT_URI=https://test.dashtam.local/oauth/schwab/callback
+
+# Alpaca Configuration (mocked)
+ALPACA_CLIENT_ID=test_alpaca_client_id
+ALPACA_CLIENT_SECRET=test_alpaca_client_secret
+ALPACA_REDIRECT_URI=https://test.dashtam.local/oauth/alpaca/callback
 
 # Chase Configuration (mocked)
 CHASE_API_KEY=test_chase_api_key
 CHASE_API_SECRET=test_chase_api_secret
-CHASE_REDIRECT_URI=https://localhost:8183/callback
+CHASE_REDIRECT_URI=https://test.dashtam.local/oauth/chase/callback
 
 # Redis Configuration
 # Use Docker internal hostname 'redis' not 'localhost'
